FLAV-10 Fixed spacing issues in rest of menu page FLAV-38 - Added button to go to the top of menu page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1861,7 +1861,7 @@ aside a:hover {
 .products_sh .cont_product p {
     height: 55px;
     overflow: hidden;
-    max-width: 300px;
+    /*max-width: 300px;*/
 }
 
 .products_sh .cont_product span {
@@ -3271,6 +3271,26 @@ form {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://via.placeholder.com/1000x1000") no-repeat center top/cover;
 }
 
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: #EB9412; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
+
 /* ------------------------------------------------------------------
 	Theme by astroon
 	Versiom: 1.0.0
@@ -3941,4 +3961,6 @@ form {
     #about .img_info .img_i::before {
         display: none;
     }
+
 }
+
